// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
hbs         1           0    
json        175         N/A  

checkup v0.0.0
config da25c78e31bb71ef06c3641e8846f64e

"
`;

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
js          1           0    
json        175         N/A  

checkup v0.0.0
config da25c78e31bb71ef06c3641e8846f64e

"
`;

exports[`@checkup/cli normal cli output should output checkup result 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;

exports[`@checkup/cli normal cli output should output checkup result in JSON 1`] = `
"{
  \\"meta\\": {
    \\"project\\": {
      \\"name\\": \\"checkup-app\\",
      \\"version\\": \\"0.0.0\\",
      \\"repository\\": {
        \\"totalCommits\\": 0,
        \\"totalFiles\\": 0,
        \\"age\\": \\"0 days\\",
        \\"activeDays\\": \\"0 days\\"
      }
    },
    \\"checkup\\": {
      \\"configHash\\": \\"3720546166a5955def89f6bf69895976\\",
      \\"version\\": \\"0.0.0\\"
    }
  },
  \\"results\\": [
    {
      \\"meta\\": {
        \\"taskName\\": \\"lines-of-code\\",
        \\"friendlyTaskName\\": \\"Lines of Code\\",
        \\"taskClassification\\": {
          \\"type\\": \\"insights\\",
          \\"category\\": \\"meta\\"
        }
      },
      \\"result\\": {
        \\"fileResults\\": [
          {
            \\"results\\": {
              \\"total\\": 1,
              \\"todo\\": 0,
              \\"block\\": 0,
              \\"blockEmpty\\": 0,
              \\"comment\\": 0,
              \\"empty\\": 0,
              \\"mixed\\": 0,
              \\"single\\": 0,
              \\"source\\": 1
            },
            \\"fileExension\\": \\"hbs\\",
            \\"errors\\": []
          },
          {
            \\"results\\": {
              \\"total\\": 1,
              \\"todo\\": 0,
              \\"block\\": 0,
              \\"blockEmpty\\": 0,
              \\"comment\\": 0,
              \\"empty\\": 0,
              \\"mixed\\": 0,
              \\"single\\": 0,
              \\"source\\": 1
            },
            \\"fileExension\\": \\"js\\",
            \\"errors\\": []
          },
          {
            \\"results\\": {
              \\"total\\": 175,
              \\"todo\\": \\"N/A\\",
              \\"block\\": \\"N/A\\",
              \\"blockEmpty\\": \\"N/A\\",
              \\"comment\\": \\"N/A\\",
              \\"empty\\": \\"N/A\\",
              \\"mixed\\": \\"N/A\\",
              \\"single\\": \\"N/A\\",
              \\"source\\": \\"N/A\\"
            },
            \\"fileExension\\": \\"json\\",
            \\"errors\\": []
          }
        ]
      }
    }
  ],
  \\"errors\\": []
}
"
`;

exports[`@checkup/cli normal cli output should run a single task if the task option is specified 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
hbs         2           0    
js          1           1    

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 2`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
js          3           2    
hbs         2           0    
json        175         N/A  

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;

exports[`@checkup/cli normal cli output should use the config at the config path if provided 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
json        175         N/A  

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
js          1           0    
json        175         N/A  

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
js          1           0    
json        175         N/A  

checkup v0.0.0
config da25c78e31bb71ef06c3641e8846f64e

"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 2`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Lines of Code ===

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  

checkup v0.0.0
config 3720546166a5955def89f6bf69895976

"
`;
